<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="buy_now">Buy now!</string>
    <string name="buy_now_underline"><u>Buy now!</u></string>
    <string name="new_product">New</string>
    <string name="select_category">Select Category</string>
    <string name="view_all">view all</string>
    <string name="hot_sales">Hot sales</string>
    <string name="see_more">see more</string>
    <string name="best_seller">Best Seller</string>
    <string name="like">like</string>
    <string name="zihuatanejo_gro">Zihuatanejo, Gro</string>
    <string name="done">Done</string>
    <string name="brand">Brand</string>
    <string name="samsung">Samsung</string>
    <string name="choose_variants_of_brand">choose variants of brand</string>
    <string name="price">Price</string>
    <string name="_0_1000">$0 - $1000</string>
    <string name="choose_range_of_price">choose range of price</string>
    <string name="size">Size</string>
    <string name="phone_size_range">4.5 to 5.5 inches</string>
    <string name="choose_size_of_device">choose size of device</string>
    <string name="filter_options">Filter options</string>
    <string name="explorer">Explorer</string>
    <string name="profile">profile</string>
    <string name="favorites">favorites</string>
    <string name="cart">cart</string>
    <string name="filters">filters</string>
    <string name="location">location</string>
    <string name="exit">exit</string>
    <string name="qr_code">qr code</string>
    <string name="phones">Phones</string>
    <string name="computer">Computer</string>
    <string name="health">Health</string>
    <string name="books">Books</string>
</resources>