<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:elevation="16dp"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/exit_Background"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_dark_rect_radius_10"
        app:layout_constraintEnd_toStartOf="@+id/filterTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/exit_Background"
        app:layout_constraintEnd_toEndOf="@+id/exit_Background"
        app:layout_constraintStart_toStartOf="@+id/exit_Background"
        app:layout_constraintTop_toTopOf="@+id/exit_Background"
        app:srcCompat="@drawable/ic_exit"
        android:contentDescription="@string/exit" />

    <TextView
        android:id="@+id/filterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:textColor="@color/dark_color"
        android:text="@string/filter_options"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/done"
        app:layout_constraintStart_toEndOf="@id/exit_Background"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/done"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/orange"
        android:text="@string/done"
        android:textAllCaps="false"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="48dp"
        android:text="@string/brand"
        android:textColor="@color/dark_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exit_Background" />

    <FrameLayout
        android:id="@+id/brandFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="31dp"
        android:background="@drawable/background_grey_rect_stroke_radius_5"
        android:foreground="?selectableItemBackground"
        android:padding="7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Brand">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/samsung"
            android:textColor="@color/dark_color"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="6dp"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="7dp"
            android:contentDescription="@string/choose_variants_of_brand"
            android:src="@drawable/ic_arrow" />
    </FrameLayout>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:textColor="@color/dark_color"
        android:layout_marginTop="18dp"
        android:text="@string/price"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brandFilter" />

    <FrameLayout
        android:id="@+id/priceFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="31dp"
        android:background="@drawable/background_grey_rect_stroke_radius_5"
        android:foreground="?selectableItemBackground"
        android:padding="7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/_0_1000"
            android:textColor="@color/dark_color"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="7dp"
            android:contentDescription="@string/choose_range_of_price"
            android:src="@drawable/ic_arrow" />
    </FrameLayout>

    <TextView
        android:id="@+id/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="18dp"
        android:text="@string/size"
        android:textColor="@color/dark_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceFilter" />

    <FrameLayout
        android:id="@+id/sizeFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/background_grey_rect_stroke_radius_5"
        android:foreground="?selectableItemBackground"
        android:padding="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/size">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/phone_size_range"
            android:textColor="@color/dark_color"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="6dp"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="7dp"
            android:contentDescription="@string/choose_size_of_device"
            android:src="@drawable/ic_arrow" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>